# ternary-memory

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
src/: consolidation.rs  episodic.rs  forgetting.rs  index.rs  lib.rs  long_term.rs  short_term.rs
